<resources>
    <string name="app_name">Яндекс. Погода</string>
    <string name="button_settings_text">Настройки</string>
    <string name="button_share_text">Поделиться</string>
    <string name="share_text">Поделиться</string>
    <string name="temperature_label">Температура</string>
    <string name="feels_like_label">Ощущается как</string>
    <string name="coordinates_text">Введите Ваши координаты:</string>
    <string name="city_coordinates">долгота: %s, ширина: %s"</string>

    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите
узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно.
Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная
локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Для вывода данных необходим доступ к GPS</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="button_check_text">Проверка</string>
    <string name="button_get_weather_text">Узнать погоду по GPS</string>
    <string name="button_text_main">Главная</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_notification_text">Уведомления</string>
    <string name="button_start_service_text">Включить</string>
    <string name="button_stop_service">Выключить</string>

</resources>